# argos3

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  CMakeLists.txt  README.asciidoc  TODO  configuration.argos  controller.lua
src/: .emacs.desktop  .gitignore  CMakeLists.txt  README.asciidoc  source_task
src/cmake/: ARGoSBuildChecks.cmake  ARGoSBuildFlags.cmake  ARGoSBuildOptions.cmake  ARGoSCheckQTOpenGL.cmake  ARGoSConfig.cmake  ARGoSCreateDocs.cmake  ARGoSPackaging.cmake  ARGoSQTOpenGLConfig.cmake  CheckQTOpenGL4ARGoS.cmake  FindARGoSQTOpenGL.cmake  FindASCIIDoc.cmake  FindDLFCN.cmake  FindFreeImage.cmake  FindGSL.cmake  FindGooglePerfTools.cmake  FindLua.cmake  FindLua52.cmake  FindLua53.cmake
src/core/: CMakeLists.txt  config.h.in
src/core/control_interface/: ci_actuator.h  ci_controller.cpp  ci_controller.h  ci_differential_steering_actuator.h  ci_leds_actuator.cpp  ci_leds_actuator.h  ci_ring_proximity_sensor.cpp  ci_ring_proximity_sensor.h  ci_robot.cpp  ci_robot.h  ci_sensor.h
src/core/real_robot/: real_robot.cpp  real_robot.h
src/core/simulator/: actuator.h  argos_command_line_arg_parser.cpp  argos_command_line_arg_parser.h  event.h  loop_functions.cpp  loop_functions.h  main.cpp  query_plugins.cpp  query_plugins.h  sensor.h  simulated_actuator.h  simulated_sensor.h  simulator.cpp  simulator.h
src/core/simulator/entity/: composable_entity.cpp  composable_entity.h  controllable_entity.cpp  controllable_entity.h  embodied_entity.cpp  embodied_entity.h  entity.cpp  entity.h  floor_entity.cpp  floor_entity.h  gripper_equipped_entity.cpp  gripper_equipped_entity.h  led_entity.cpp  led_entity.h  led_equipped_entity.cpp  led_equipped_entity.h  medium_entity.cpp  medium_entity.h  positional_entity.cpp  positional_entity.h  rab_equipped_entity.cpp  rab_equipped_entity.h  wheeled_entity.cpp  wheeled_entity.h  wifi_equipped_entity.cpp  wifi_equipped_entity.h  wifi_medium_entity.cpp  wifi_medium_entity.h
src/core/simulator/extra/: entity.h  old_main.cpp  operation.h  testing.cpp
src/core/simulator/medium/: medium.cpp  medium.h
src/core/simulator/physics_engine/: physics_engine.cpp  physics_engine.h  physics_engine_entity.h  physics_model.cpp  physics_model.h
src/core/simulator/space/: space.cpp  space.h  space_hash.h  space_hash_native.h  space_multi_thread.cpp  space_multi_thread.h  space_multi_thread_balance_length.cpp  space_multi_thread_balance_length.h  space_multi_thread_balance_quantity.cpp  space_multi_thread_balance_quantity.h  space_multi_thread_h_dispatch.cpp  space_multi_thread_h_dispatch.h  space_multi_thread_scatter_gather.cpp  space_multi_thread_scatter_gather.h  space_no_threads.cpp  space_no_threads.h
src/core/simulator/visualization/: default_visualization.cpp  default_visualization.h  visualization.cpp  visualization.h
src/core/utility/: rate.cpp  rate.h  signal_processing.cpp  signal_processing.h  string_utilities.cpp  string_utilities.h
src/core/utility/configuration/: argos_configuration.h  argos_exception.h  base_configurable_resource.h  command_line_arg_parser.cpp  command_line_arg_parser.h  memento.h
src/core/utility/datatypes/: any.h  byte_array.cpp  byte_array.h  color.cpp  color.h  datatypes.h  set.h
src/core/utility/math/: box.cpp  (+34 more)
src/plugins/: CMakeLists.txt
src/plugins/robots/: CMakeLists.txt  CMakeLists.txt~
src/plugins/simulator/: CMakeLists.txt
src/scripts/: argos.desktop  argos3.conf.in  argos3.desktop.in  argos3.pc.in  argos3_bash_completion.sh  argos3_cmake_config.cmake.in  argos3_macos_wrapper.sh.in  argos3_simulator.spec  argos_post_install.sh  argos_post_install.sh.in  gdbinit.in  macos_uninstall_argos3.sh.in  postinst  setup_env.sh.in  travis-opensuse-setup.sh  travis-opensuse-test.sh  uninstall_argos3.sh.in  x-argos-mime-info.xml
src/scripts/slackware/: argos.SlackBuild.in  doinst.sh.in  slack-desc.in
src/testing/: CMakeLists.txt
src/testing/argos/: arena_large.template.argos  arena_medium.template.argos  arena_small.template.argos  object_testing.argos  skeleton.argos
src/testing/builderbot/: CMakeLists.txt
src/testing/drone/: CMakeLists.txt
src/testing/examples/: dynamics3d_convex_hull_test.argos  dynamics3d_magnetism_test.argos  dynamics3d_multi_body_test.argos  dynamics3d_multi_body_test.lua  dynamics3d_single_body_test.argos  footbot_camera_box_example.argos  footbot_camera_box_example.lua  footbot_camera_example.argos  footbot_camera_example.lua  footbot_camera_prototype_example.argos  footbot_camera_prototype_example.lua  prototype_radio_test.argos  prototype_radio_test.lua  prototype_srocs_system.argos  prototype_srocs_system_arcontrol.lua  prototype_srocs_system_sbcontrol.lua
src/testing/experiment/: test_distance_scanner.lua  test_empty.lua  test_epuck.lua  test_epuck_lua.argos  test_epuck_lua.xml  test_eyebot.lua  test_eyebot.xml  test_eyebot_controller.cpp  test_eyebot_controller.h  test_footbot.argos  test_footbot.xml  test_footbot_controller.cpp  test_footbot_controller.h  test_footbot_lua.argos  test_footbot_lua.xml  test_gripper.lua  test_leds.lua  test_loop_functions.cpp  test_loop_functions.h  test_media_enabledisable.xml  test_media_enabledisable_controller.cpp  test_media_enabledisable_controller.h  test_media_enabledisable_loopfunctions.cpp  test_media_enabledisable_loopfunctions.h  test_miniquadrotor.lua  test_miniquadrotor_lua.argos  test_miniquadrotor_lua.xml  test_objectoriented.lua  test_physx_lua.argos  test_physx_lua.xml  test_rab.lua  test_script.lua  test_selection.argos  test_spiri.argos  test_spiri_camera.lua  test_turret.lua  test_user_functions.cpp  test_user_functions.h
src/testing/foot-bot/: CMakeLists.txt
src/testing/pi-puck/: CMakeLists.txt
src/testing/prototype/: CMakeLists.txt
src/testing/unit/: test-box.cpp  test-client.cpp  test-cylinder.cpp  test-grid.cpp  test-list.cpp  test-range.cpp  test-rate.cpp  test-reset.cpp  test-rng.cpp  test-server.cpp
src/testing/xml/: empty.xml  object_definition.xml  object_testing.xml  skeleton.xml
src/wrappers/: CMakeLists.txt
src/wrappers/lua/: CMakeLists.txt  control_interface.i  simulator.i
(+1552 files in other folders)
